# turtle

./: .gitignore  hardware-config.json  temp.py
documentation/: guidelines  nova architecture.docx  nova architecture.md
sdk/: __init__.py  hardware_config_defaults.py  hardware_config_loader.py  install.sh  pyproject.toml  requirements.txt  start.sh  subjects.py
sdk/events/: __init__.py  eventBuilder.py  eventEnvelope.py
sdk/globe/: __init__.py  globe.py
sdk/globe/visualization/: __init__.py  map_template.html  visualization.py
sdk/hardwareService/: API.txt  __init__.py  __main__.py  config.json  configManager.py  hardwareService.py  ioLayer.py  main.py  novaAdapter.py  regressionTest.py  requirements.txt  restartManager.py  subjects.py
sdk/hardwareService/WF_SDK/: logic.py  scope.py
sdk/hardwareService/devices/: analogOscopeDevice.py  baseDevice.py  digitalOscopeDevice.py  sbfDevice.py  ubxDevice.py
sdk/hardwareService/logging/: 203244213156284-X20P.csv  20466138138220-F9P.csv  3765234104222-M9N.csv  3816849-mosaic-X5.csv  3816849.csv  3819315-mosaic-X5.csv  3824192-mosaic-X5.csv  396620287218-F9P.csv  966612274152-F9P.csv
sdk/hardwareService/plugins/: __init__.py  analogOscopePlugin.py  basePlugin.py  digitalOscopePlugin.py  sbfPlugin.py  ubxPlugin.py
sdk/logging/: __init__.py  context.py  logger.py
sdk/parsers/: __init__.py  geoidHeights.csv  globe.py  nmea.py  sbf.py  ubx.py
sdk/streams/: __init__.py  streamBuilder.py  streamMessage.py
sdk/transport/: __init__.py  natsTransport.py  nngTransport.py  transportBase.py  transportFactory.py
(+142 files in other folders)
