[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sdk"
version = "0.1.0"
description = "NOVA SDK - Shared utilities for transport, logging, parsing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynng>=0.7.2",
    "nats-py>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
